--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -8,6 +8,6 @@
         </div>
     </div>
     <div class="d-none d-md-block col-md-3">
-        <video @ref="VideoLocal" class="video-local"></video>
+        <video @ref="VideoLocal" class="video-local" controls="true"></video>
     </div>
 </div>
