init refactoring project

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="VideoCall.styles.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -33,7 +34,7 @@
     <script src="js/jquery.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/video-call.js"></script>
+    <script src="js/signalr.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
