Refactoring Hub SignalR

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@page "/{roomId}"
+@page "/token/{token}/room/{roomId}"
 
 <div class="row h-100">
     <div class="col-12 col-md-9 h-100 border-right">
