stream local ratio update

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -11,6 +11,8 @@
         </div>
     </div>
     <div class="d-none d-md-block col-md-3">
-        <video @ref="VideoLocal" class="video-local" controls="true" autoplay playsinline></video>
+        <div class="ratio ratio-4x3">
+            <video @ref="VideoLocal" class="video-local" controls="true" autoplay playsinline></video>
+        </div>
     </div>
 </div>
